fix: webcam width on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -29,6 +29,13 @@
     background: #cac9c9;
 }
 
+@media (max-width: 767px) {
+    #result, #video {
+        height: auto;
+        max-width: 90vw;
+    }
+}
+
 pre {
     overflow: auto;
     padding: 15px;
